(figma) Fix for design mode snippet clipping badly (#8368)
This fixes an issue where the code snippet was drawing horizontaly outside its bounds.

--- a/tools/figma-inspector/src/main.css
+++ b/tools/figma-inspector/src/main.css
@@ -71,6 +71,7 @@ body {
 
 .code-snippet {
     width: 100%;
+    max-width: 100%;
     font-size: 12px;
     white-space: pre-wrap;
     font-family: "Roboto Mono", Monaco, "Courier New", monospace;
@@ -82,6 +83,7 @@ body {
     counter-increment: step 0;
     padding-left: 3rem;
     position: relative;
+    box-sizing: border-box;
 }
 
 .code-snippet .line {
